<resources>
    <string name="app_name">Speleo Club</string>
    <string name="BoutonMenu">Bienvenue</string>
    <string name="date_systeme">12/08/2008</string>
    <string name="nom_club">Speleo</string>
    <string name="ListeMateriels">Liste de Matériels</string>
    <string name="filtreModele">Filtre Modele</string>
    <string name="filtreDate">Filtre Date</string>
    <string name="filtreMarquage">Filtre Marquage</string>
    <string name="filtre4">Filtre 4</string>
    <string name="filtre5">Filtre 5</string>
    <string name="ficheDeVie">Fiche de vie</string>
    <string name="ficheControle">Fiche Contrôle</string>
    <string name="FAfficher">Afficher</string>
    <string name="FModifier">Modifier</string>
    <string name="FCreer">Créer</string>
    <string name="FSupprimer">Supprimer</string>
    <string name="boutonInfoMateriel">Info</string>
    <string name="dateControle">Date du contrôle</string>
    <string name="natureControle">Nature du contrôle</string>
    <string name="version">1</string>
    <string name="upgrade"></string>
    <string name="insert"></string>
    <string name="filtreText">Filtre : </string>
    <string name="BtnImport">Import</string>
    <string name="BtnExport">Export</string>

</resources>