<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondliste">

    <TextView
        android:id="@+id/listMat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ListeMateriels"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="37dp"
        android:textColor="@color/white"/>

    <SearchView
        android:id="@+id/recherche"
        android:layout_marginTop="10dp"
        android:layout_width="225dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@color/white"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="105dp" />

    <Spinner
        android:id="@+id/selection"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="103dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="173dp">

            <CheckBox
                android:id="@+id/filtreModele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtreModele"
                android:textColor="@color/white"/>

            <CheckBox
                android:id="@+id/filtreDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtreDate"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtre5"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="173dp">

            <CheckBox
                android:id="@+id/filtreMarquage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtreMarquage"
                android:textColor="@color/white"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtre4"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:background="@color/white"
        android:layout_width="409dp"
        android:layout_height="386dp"
        android:id="@+id/listeMateriel"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="344dp"
        />

</LinearLayout>