<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="101dp"
            android:layout_height="91dp"
            android:src="@mipmap/logo_club"></ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="235dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/arialbd"
                android:text="@string/nom_club"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_systeme"></TextView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/BoutonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoutonMenu"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"></Button>


</LinearLayout>