<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoMateriel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/nomInfo"
        android:text="Test"
        android:textSize="25dp"
        android:fontFamily="@font/ariblk"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateMateriel"
        android:text="Date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/arialmdm"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modeleMateriel"
        android:text="Modele"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/arialmdm"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marquageMateriel"
        android:text="Marquage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/arialmdm"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ficheDeVie"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/arialmdm"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAfficher"
            android:layout_margin="10dp"
            android:id="@+id/FVAfficher"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FModifier"
            android:id="@+id/FVModifier"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FCreer"
            android:id="@+id/FVCreer"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FSupprimer"
            android:id="@+id/FVSupprimer"></Button>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ficheControle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/arialmdm"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAfficher"
            android:layout_margin="10dp"
            android:id="@+id/FCAfficher"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FModifier"
            android:id="@+id/FCModifier"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FCreer"
            android:id="@+id/FCCreer"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/FSupprimer"
            android:id="@+id/FCSupprimer"></Button>
    </LinearLayout>

</LinearLayout>